  |              point the client is assumed to be stable. Code that
  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.14.2.83 2004/08/24 15:51:52 snikkel Exp $
==========================================================================

2.9000
------
2.9009-494  chg: all: Major clean up in the OGR core base
            imp: ppc: Modified KOGE cores - should be faster in most cases
            new: solaris: 64-bit sparc client with faster 64-bit OGR
            imp: alpha: Added EV4 and EV67-specific 64-bit cores
            fix: x86: ogr core preselection for Pentium 4 & M (#3742, #3744)
            imp: x86: Pentium/Celeron M & Pentium 4 Prescott detection (#3745)

2.9008-493  new: ppc: Enabled KOGE cores for all PPC targets, except AIX
            new: macosx: ASM-optimized GARSP-5 cores (KOGE Scalar/Hybrid)
            fix: all: Fixed an issue with -runbuffers (= -runoffline -n -1)
                      that caused the client to wait for ever.

2.9008-492  imp: ppc: Faster GARSP Vector core
            imp: all: Added an option to rotate log files at local time or UTC
                      time (#2613)
            fix: all: Made week number ISO 8601 compliant (#3336)
            imp: all: Display which cruncher load/save/complete work (#2954)
            imp: all: Log more error messages (#3611)
            imp: macosx: Made the buffer threshold limits hw-dependant (#3626)
            fix: ppc: Select core #5 on PPC 601 (#3685)
            fix: macosx: Now recognize PPC 750FX (#3675)
            fix: macosx: No longer read the TAU on G4/G5.
            imp: solaris: Identify SPARC64-IV/US-IV (#3693)
            fix: all: Fixed the ideal completion time inaccuracy (#3495)